create abstract BaseModel with repeatable annotation to inherit and write api docs
